--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -115,7 +115,6 @@ main {
 }
 
 .tabela-titulo {
-
   width: 200px;
 }
 
@@ -149,7 +148,7 @@ main {
 }
 
 .block {
-  min-width: 300px;
+  width: 300px;
   height: 200px;
   border: 1px solid black;
   border-radius: 30px;
@@ -166,17 +165,6 @@ main {
   padding-top: 80px;
 }
 
-.block_2 {
-  min-width: 300px;
-  height: 300px;
-  border: 1px solid black;
-  border-radius: 30px;
-  border: 2px solid black;
-  padding: 20px;
-  margin: 20px;
-  background-color: lightgrey
-}
-
 .conteudo-secundario {
   padding-left: 80px;
 }
@@ -187,12 +175,8 @@ main {
   padding-left: 600px;
 }
 
-.geren_tudo {
-  padding-left: 350px;
-}
 
 .title {
-  padding-left: 80px;
   font-size: 20px;
 }
 
@@ -224,14 +208,13 @@ main {
 }
 
 th, td {
-  width: 200px;
+  width: 150px;
 }
 
 td button {
   margin-left: 30px;
   width: 50px;
   border: 1px solid black;
-
 }
 
 .forms-geral{
@@ -246,4 +229,27 @@ td button {
   flex-direction: column;
   align-items: center;
   padding-left: 50px;
+  margin: -800px;
+}
+
+.forms-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.livros {
+  padding-left: 200px;
+  margin-top: -800px;
+}
+
+.titulo-home {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: xx-large;
+}
+
+.conteudo {
+  padding-top: 30px;
+  padding-left: 80px;
+  display: flex;
 }
